# GetStartedWithVSCode

./: .gitignore  Readme.md
Copy Code Text/: Add Cmake kit.txt  Add VS Code User Settings.txt  Add tasks json.txt
Extension js update/: extension.js
VScode_supply/: Install_RunOnce.bat
VStest/: CMakeLists.txt
VStest/config/cmake/: common.cmake
VStest/config/openocd/: board_cm0.cfg  board_cm4.cfg
VStest/design/: design.PSoCconfig
VStest/design/GeneratedSource/: cycfg.c  cycfg.h  cycfg_connectivity.h  cycfg_pins.c  cycfg_pins.h
VStest/source/: main.c
